--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,17 +1,5 @@
 <h1>Create a new article</h1>
 
-<%= form_with scope: :article, url: articles_path, local: true do |f| %>
-  <p>
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
-  </p>
+<%= render 'form' %>
 
-  <p>
-    <%= f.label :description %><br>
-    <%= f.text_field :description %>
-  </p>
-
-  <p>
-    <%= f.submit %>
-  </p>
-<% end %>
+<%= link_to 'Return to articles listing', articles_path %>
